# gh-hygiene

./: .gitignore  README.md  pyproject.toml  setup.py
src/gh_hygiene/: __init__.py  auth.py  chat.py  cli.py  client.py  config.py  display.py  intents.py  server.py  tools.py
src/gh_hygiene/commands/: files.py  hygiene.py  repos.py
src/gh_hygiene/ui/: index.html
tests/: test_auth.py  test_chat.py  test_files.py  test_hygiene.py  test_repos.py  test_tools.py
