[project]
name = "gh-hygiene"
version = "0.1.0"
description = "AI-powered GitHub repo hygiene manager"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "PyGithub>=2.3",
    "rich>=13.7",
    "keyring>=25.0",
    "openai>=1.30",
    "pyyaml>=6.0",
    "fastapi>=0.109",
    "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[project.scripts]
gh-hygiene = "gh_hygiene.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
